fix: missing jdbc-module; now building fatjar